<resources>
    <string name="app_name">Daily Expense</string>

    <string name="homeMenu">Home</string>
    <string name="profileMenu">Profile</string>
    <string name="settingMenu">Setting</string>
    <string name="logoutMenu">Logout</string>
    <string name="shareMenu">Share</string>
    <string name="communicateMenu">Communicate</string>
    <string name="about_usMenu">About Us</string>
    <string name="rate_usMenu">Rate Us</string>
    <string name="feedbackMenu">Feedback</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="medical">Medical</string>
    <string name="grocery">Grocery</string>
    <string name="mess">Mess</string>
    <string name="entertainment">Entertainment</string>
    <string name="fees">Fees</string>
    <string name="rent">Rent</string>
    <string name="telephone">Telephone</string>
    <string name="electricity">Electricity</string>
    <string name="cable">Cable</string>
    <string name="travel">Travel</string>
    <string name="todo">TODO</string>
    <string name="eDate">Date</string>
    <string name="amount">Amount</string>
    <string name="eDescription">Description</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="eIncome">Income</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="sum">Sum</string>
    <string name="others">Others</string>
    <string name="add">Add</string>

    <string-array name="incomeList">
        <item>Category</item>
        <item>Salary</item>
        <item>Business</item>
        <item>Sell</item>
        <item>Others</item>
    </string-array>
</resources>
