<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/colorPrimary"
    >
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/date"
        android:textSize="20sp"
        android:textStyle="normal"
        android:textColor="@color/Black"
        android:gravity="center"
        android:background="@color/MediumAquamarine"
        android:layout_marginBottom="1dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
         />
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/expenses"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textStyle="normal"
        android:textColor="@color/Black"
        android:gravity="center"
        android:layout_marginLeft="1dp"
        android:layout_marginStart="1dp"
        android:background="@color/MediumAquamarine"
        android:layout_marginBottom="1dp"
         />
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/description"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textStyle="normal"
        android:textColor="@color/Black"
        android:gravity="center"
        android:layout_marginLeft="1dp"
        android:layout_marginStart="1dp"
        android:background="@color/MediumAquamarine"
        android:layout_marginBottom="1dp"
        />

</LinearLayout>