<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="wrap_content">



    <EditText
        android:id="@+id/dialogExpenseId"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:hint="@string/expenses"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:background="@drawable/edit_text_background"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="4"
        android:background="@drawable/edit_text_background"

        >
        <EditText
            android:id="@+id/dialogDateId"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.5"
            android:hint="@string/date"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:inputType="date"
            android:background="@drawable/edit_text_background"


            />
        <ImageView
            android:id="@+id/dialogCalendarId"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:padding="2dp"
            android:src="@drawable/calendar"
            />

    </LinearLayout>




    <EditText
        android:id="@+id/dialogDescriptionId"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/description"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:background="@drawable/edit_text_background"
        />

</LinearLayout>