<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/income"
        android:gravity="center"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/incomeId"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:hint="@string/income"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:background="@drawable/edit_text_background"

        />
    <Spinner
        android:id="@+id/spinnerID"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:background="@drawable/edit_text_background"
        android:focusable="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="4"

        >
        <EditText
            android:id="@+id/dateId"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="3.5"
            android:hint="@string/date"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:inputType="date"
            android:background="@drawable/edit_text_background"

            />
        <ImageView
            android:id="@+id/incomeDialogCalendarId"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight=".5"
            android:src="@drawable/calendar"
            />

    </LinearLayout>


    <EditText
        android:id="@+id/descriptionId"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/description"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:background="@drawable/edit_text_background"
        />

</LinearLayout>